feat: add new example and agentblocks example (#13)